# simulation_random_variables

./: .travis.yml  CMakeLists.txt  README.md
algorithms/: CMakeLists.txt  statistic.cpp  statistic.hpp  utils.cpp  utils.hpp
application/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
sapmles/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  simulation.cpp
simulation/: CMakeLists.txt  distribution.cpp  distribution.hpp  statistic.cpp  statistic.hpp  utils.cxx  utils.hpp
